--- a/manifest.json
+++ b/manifest.json
@@ -12,4 +12,5 @@
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff",
+  "homepage": "https://amitdhawan.github.io/my-portfolio-app"
 }
